2022-09-16T16:09:04Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3069201262
* notice: last 14d: unq all: 4 8
* notice: prev accum: outdated-unq outdated-all / unq all: 23 57 / 26 64
* notice: next accum: outdated-unq outdated-all / unq all: 23 57 / 27 65
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-16]

2022-09-15T16:09:46Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3061987813
* notice: last 14d: unq all: 3 7
* notice: prev accum: outdated-unq outdated-all / unq all: 22 56 / 26 64
* notice: next accum: outdated-unq outdated-all / unq all: 23 57 / 26 64
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-01] / []

2022-09-14T00:39:42Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3049361801
* notice: last 14d: unq all: 4 8
* notice: prev accum: outdated-unq outdated-all / unq all: 21 54 / 26 64
* notice: next accum: outdated-unq outdated-all / unq all: 22 56 / 26 64
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-30] / []

2022-09-12T16:11:08Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3038837666
* notice: last 14d: unq all: 5 10
* notice: prev accum: outdated-unq outdated-all / unq all: 20 53 / 26 64
* notice: next accum: outdated-unq outdated-all / unq all: 21 54 / 26 64
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-29] / []

2022-09-09T00:41:07Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3019210567
* notice: last 14d: unq all: 6 11