@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-16T16:09:04Z",
+  "timestamp" : "2022-09-17T08:09:09Z",
   "count_outdated" : 57,
   "uniques_outdated" : 23,
-  "count" : 65,
-  "uniques" : 27,
+  "count" : 66,
+  "uniques" : 28,
   "views" : [
     {
       "timestamp": "2022-09-04T00:00:00Z",
@@ -28,6 +28,13 @@
     },
     {
       "timestamp": "2022-09-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-17T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
