@@ -1,6 +1,6 @@
 {
-  "count": 8,
-  "uniques": 4,
+  "count": 9,
+  "uniques": 5,
   "views": [
     {
       "timestamp": "2022-09-04T00:00:00Z",
@@ -19,6 +19,11 @@
     },
     {
       "timestamp": "2022-09-16T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-17T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
