@@ -1,3 +1,11 @@
+2022-09-17T08:09:09Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3072650965
+* notice: last 14d: unq all: 5 9
+* notice: prev accum: outdated-unq outdated-all / unq all: 23 57 / 27 65
+* notice: next accum: outdated-unq outdated-all / unq all: 23 57 / 28 66
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-17]
+
 2022-09-16T16:09:04Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3069201262
 * notice: last 14d: unq all: 4 8
